--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #6563FF;
+  background: #3f3c3ec7;
 }
 .header{
     margin: 10px 20px 30px 20px;
